[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Interface.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="life" type="Label" parent="."]
margin_left = 988.0
margin_top = 20.0
margin_right = 1188.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 1 )
text = " life:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.435
margin_top = -113.196
margin_right = 214.565
margin_bottom = 45.804
custom_fonts/font = SubResource( 1 )
text = "DUMB GAME"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -33.8591
margin_top = 49.1369
margin_right = 6.14087
margin_bottom = 127.137
custom_fonts/font = SubResource( 1 )
text = "-"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Start" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -141.979
margin_top = 115.877
margin_right = 119.021
margin_bottom = 199.877
custom_fonts/font = SubResource( 2 )
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
